# redisai-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  TODO.MD
.github/workflows/: ci.yml
src/: config.rs  info.rs  lib.rs  model.rs  tensor.rs
tests/: tensor.rs
tests/testdata/: boston.onnx  findsquare.onnx  script.txt
