[package]
name = "redisai"
version = "0.1.1"
authors = ["Thomaub <github.thomaub@gmail.com>"]
description = "A rust client for RedisAI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ThomAub/redisai-rs"
homepage = "https://github.com/ThomAub/redisai-rs"
edition = "2018"

[dependencies]
ndarray = "0.14.0"
redis = "0.20.0"
strum = "0.20"
strum_macros = "0.20"
