[package]
name = "redisai"
version = "0.1.1"
authors = ["Thomaub <github.thomaub@gmail.com>"]
description = "A rust client for RedisAI"
keywords = ["redis", "database", "machine-learning"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ThomAub/redisai-rs"
homepage = "https://github.com/ThomAub/redisai-rs"
edition = "2018"


[dependencies]
redis = { version = "0.20" }

# To turn our enum into string
strum = { version = "0.20" }
strum_macros = { version = "0.20" }

# Easy conversion from ndarray
ndarray = { version = "0.14", optional = true }

# Enable the async version of command
futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
tokio = { version = "1", optional = true, features = ["full"] }

# Only needed for async_std support
async-std = { version = "1.5.0", optional = true }
async-trait = { version = "0.1.24", optional = true }

[features]
default = ["aio"]
aio = ["futures", "tokio", "redis/aio", "redis/async-std-comp", "redis/tokio-comp"]
async-std-comp = ["aio", "async-std"]
tokio-comp = ["aio", "tokio", "tokio/net"]
nda = ["ndarray"]
